# django-cookiejwt

./: README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: pr-validation.yaml  publish.yaml
src/django_cookiejwt/: __init__.py  authentication.py  conf.py  middlewares.py  services.py  urls.py  views.py
tests/: conftest.py  test_authentication.py  test_middlewares.py
