[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cookiejwt"
version = "0.0.1"
description = "JWT authentication using HTTP-only cookies for Django REST Framework"
readme = "README.md"
authors = [
    {name = "Andrey Kalashnikov", email = "andrey.kalashnikov@muehlemann-popp.ch"},
]
license = {text = "MIT"}
keywords = ["django", "jwt", "authentication", "cookies", "rest-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1", 
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "Django>=4.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
]
docs = []
test = [
    "coverage>=7.0",
    "tox>=4.0",
]

[project.urls]
Homepage = "https://github.com/muehlemann-popp/django-cookiejwt"
Repository = "https://github.com/muehlemann-popp/django-cookiejwt"
Documentation = "https://github.com/muehlemann-popp/django-cookiejwt/wiki"
"Bug Tracker" = "https://github.com/muehlemann-popp/django-cookiejwt/issues"
Changelog = "https://github.com/muehlemann-popp/django-cookiejwt/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/django_cookiejwt"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov=django_cookiejwt --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
